<resources>
    <string name="app_name">movieCatalog</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="login_to_the_app">Войти</string>
    <string name="register_in_the_app">Регистрация</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="i_have_account">У меня уже есть аккаунт</string>
    <string name="email">Email</string>
    <string name="name">Имя</string>
    <string name="birth_date">Дата рождения</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="passwords_not_match">Пароли не совпадают</string>
    <string name="wrong_login">Неверное имя пользователя</string>
    <string name="error">Ошибка</string>
    <string name="wrong_login_or_password">Неверный логин или пароль</string>
    <string name="fill_login">Заполните логин!</string>
    <string name="fill_email">Заполните почту!</string>
    <string name="fill_name">Заполните имя!</string>
    <string name="fill_password">Заполните пароль!</string>
    <string name="password_too_short">Пароль должен содержать хотя бы 6 символов!</string>
    <string name="fill_birth_date">Заполните дату рождения!</string>
    <string name="select_gender">Укажите пол!</string>
    <string name="incorrect_login">"Логин может содержать только буквы и цифры"</string>
    <string name="incorrect_email">Почта не соответствует формату</string>
    <string name="success_login">Успешный вход</string>
    <string name="select_date">Select date</string>
    <string name="check_fields_are_correct">Проверьте правильность заполнения полей или попробуйте другой логин</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="empty_answer_from_server">Пустой ответ от сервера></string>
    <string name="access_token">access token</string>
    <string name="token_storage">token storage</string>
    <string name="key_expiration_time">expiration_time</string>
    <string name="watch">Смотреть</string>
    <string name="favourite">Избранное</string>
    <string name="gallery">Галерея</string>
    <string name="main">Главное</string>
    <string name="collections">Коллекции</string>
    <string name="profile">Профиль</string>
    <string name="year_country_format">%1$d • %2$s</string>
    <string name="add_to_collection">Добавить в коллекцию</string>
    <string name="about_movie">О фильме</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="time">Время</string>
    <string name="tagline">Слоган</string>
    <string name="director">Режиссёр</string>
    <string name="budget">Бюджет</string>
    <string name="fees">Сборы в мире</string>
    <string name="age">Возраст</string>
    <string name="genres">Жанры</string>
    <string name="reviews">Отзывы</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="anonymous_user">Анонимный пользователь</string>
    <string name="my_review">мой отзыв</string>
    <string name="leave_a_review">Оставить отзыв</string>
    <string name="review">Отзыв</string>
    <string name="anonymous_review">Анонимный отзыв</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="back">Назад</string>
    <string name="default_avatar">Default avatar</string>
    <string name="edit_review">Изменить отзыв</string>
    <string name="delete_review">Удалить отзыв</string>
    <string name="star">star</string>
    <string name="check_icon">star</string>
    <string name="movie_details">movie_details</string>
    <string name="bearer">Bearer</string>
    <string name="already_had_review">already had review</string>
    <string name="forbidden_to_edit">Нельзя изменить видимость автора отзыва</string>
    <string name="edit_error">Ошибка редактирования:</string>
    <string name="load_error">Не удалось загрузить детали фильма</string>
    <string name="email_profile">E-mail</string>
    <string name="gender">Пол</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="collections_storage">encrypted_collections_storage</string>
    <string name="user_collections">user_collections_key</string>
    <string name="create_collection">Создать коллекцию</string>
    <string name="edit_collection">Изменить коллекцию</string>
    <string name="collection_name">Название</string>
    <string name="choose_icon">Выбрать иконку</string>
</resources>