<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="false"
    android:background="@color/background"
    android:fillViewport="true"
    tools:context=".ui.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@color/background">

        <ImageView
            android:id="@+id/auth_screen_app_logo"
            android:layout_width="0dp"
            android:layout_height="65dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            android:layout_marginStart="118dp"
            android:layout_marginEnd="120dp"
            app:srcCompat="@drawable/app_logo" />

        <ImageView
            android:id="@+id/auth_screen_app_name"
            android:layout_width="147.41dp"
            android:layout_height="22.58dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_screen_app_logo"
            android:layout_marginTop="13dp"
            android:layout_marginStart="106dp"
            android:layout_marginEnd="106dp"
            app:srcCompat="@drawable/app_name" />

        <TextView
            android:id="@+id/registration_text"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_vertical"
            android:text="@string/register_in_the_app"
            android:textColor="@color/accent"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auth_screen_app_name" />

        <EditText
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/login_hint"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_text" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textVisiblePassword"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/confirm_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/birth_date"
            tools:ignore="TextFields"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/authorization_border"
            android:ems="10"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:hint="@string/birth_date"
            android:paddingStart="16dp"
            android:paddingTop="13dp"
            android:paddingEnd="16dp"
            android:paddingBottom="13dp"
            android:textSize="14sp"
            android:textColor="@color/accent"
            android:textColorHint="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/birth_date"
            app:layout_constraintEnd_toEndOf="@+id/birth_date"
            app:layout_constraintTop_toTopOf="@+id/birth_date"
            app:srcCompat="@drawable/calendar" />

        <RadioGroup
            android:id="@+id/gender_selector"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/gender_selector_background"
            android:divider="@drawable/gender_divider"
            android:showDividers="middle"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birth_date">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gender_left_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gender_right_selector"
                android:button="@null"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@color/gray"
                android:textSize="14sp"/>
        </RadioGroup>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="400dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gender_selector"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/error"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:textSize="18sp"
            android:textColor="@color/error"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/register_in_the_app"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:background="@drawable/authorization_button_border"
            android:text="@string/sign_up"
            android:textColor="@color/accent"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:fontFamily="@font/ibm_plex_sans_bold"
            android:clickable="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:padding="12dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintBottom_toTopOf="@+id/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/have_account"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:background="@drawable/authorization_button"
            android:text="@string/i_have_account"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:padding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>