<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/avatar_profile"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/user_name_profile"
        android:layout_width="0dp"
        android:layout_height="88dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textFontWeight="700"
        android:fontFamily="@font/sf_pro_text_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avatar_profile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginStart="16dp"
        android:text="@string/email_profile"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="172dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/authorization_border"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="256dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/authorization_border"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birth_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="312dp"
        android:layout_marginStart="16dp"
        android:text="@string/birth_date"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_birth_date"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="340dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/authorization_border"
        android:ems="10"
        android:focusable="false"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:textSize="14sp"
        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:textColor="@color/accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="396dp"
        android:layout_marginStart="16dp"
        android:text="@string/gender"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/gender_selector"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="424dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/gender_selector_background"
        android:divider="@drawable/gender_divider"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gender_left_selector"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:button="@null"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/male"
            android:textColor="@color/gray_faded"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/gender_right_selector"
            android:fontFamily="@font/ibm_plex_sans_regular"
            android:button="@null"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/female"
            android:textColor="@color/gray_faded"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:background="@drawable/authorization_button"
        android:text="@string/logout"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/ibm_plex_sans_medium"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="84dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:background="@color/bottom_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/profile_screen_tv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        app:tint="@color/gray"
        app:srcCompat="@drawable/bottom_panel_tv" />

    <TextView
        android:id="@+id/main_text_in_profile_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center_vertical"
        android:text="@string/main"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profile_screen_tv"
        app:layout_constraintStart_toStartOf="@+id/profile_screen_tv"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/profile_screen_star"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:clickable="true"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bottom_panel_star"
        android:layout_marginStart="168dp"
        android:layout_marginEnd="168dp"
        app:tint="@color/gray" />

    <TextView
        android:id="@+id/star_text_in_main_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/collections"
        android:textColor="@color/gray"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/profile_screen_star"
        app:layout_constraintStart_toStartOf="@+id/profile_screen_star" />

    <ImageView
        android:id="@+id/profile_screen_profile"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:clickable="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bottom_panel_profile"
        app:tint="@color/accent" />

    <TextView
        android:id="@+id/profile_text_in_profile_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:text="@string/profile"
        android:textColor="@color/accent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/profile_screen_profile"
        app:layout_constraintStart_toStartOf="@+id/profile_screen_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>