<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_in_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.SignInActivity">

    <ImageView
        android:id="@+id/auth_screen_app_logo"
        android:layout_width="0dp"
        android:layout_height="110dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="77dp"
        android:layout_marginTop="56dp"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/auth_screen_app_name"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_screen_app_logo"
        app:srcCompat="@drawable/app_name" />

    <EditText
        android:id="@+id/sign_in_login_input"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="274dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/authorization_border"
        android:ems="10"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:hint="@string/login_hint"
        android:inputType="textVisiblePassword"
        android:paddingStart="16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:textColor="@color/accent"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_login_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/authorization_border"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textColor="@color/accent"
        android:textColorHint="@color/gray"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="13dp"
        android:paddingBottom="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_login_input" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        app:layout_constraintWidth_max="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_login_password"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/wrong_login_or_password"
        android:fontFamily="@font/ibm_plex_sans_regular"
        android:textSize="18sp"
        android:textColor="@color/error"
        android:visibility="gone" />

    <TextView
        android:id="@+id/login_to_the_app"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/authorization_button_border"
        android:text="@string/login_to_the_app"
        android:textColor="@color/accent"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:fontFamily="@font/ibm_plex_sans_bold"
        android:clickable="true"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/register_in_the_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_in_the_app"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@drawable/authorization_button"
        android:text="@string/register_in_the_app"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:padding="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>